// Vitest Snapshot v1

exports[`attributify > extract1 1`] = `
"
  <view >
    <button
      h-80 text-center flex flex-col align-center select-none all:transition-400
      
      li-bg=\\"blue-500 hover:blue-500 dark:!blue-500 dark:hover:blue-500\\"
      class=\\"text-red font-bold bg-blue-400 bg-hover:blue-400 bg-dark:!blue-400 bg-dark:hover:blue-400\\"
      :loading=\\"loading\\"
      my-class=\\"text-red font-bold\\"
      title=\\"this is title\\"
      my-prop
      non-value
      :class=\\"{ 'text-blue': true, 'text-green': false }\\"
      :class=\\"[ 'text-blue', 'text-green' ]\\"
      :class=\\"[ str === 'blue' ? 'text-blue' : 'text-red' ]\\"
    >
      Button
    </button>

    <button class=\\"border border-red\\">
      Button
    </button>

    <button class=\\"flex flex-col flex-wrap\\">
      Button
    </button>

    <button 
      
      
      
      
      
    class=\\"bg-blue-400 bg-hover:blue-500 bg-dark:blue-500 bg-dark:hover:blue-600 text-sm text-white font-mono font-light p-y-2 p-x-4 border-2 border-rounded border-blue-200\\">
      Button
    </button>

    <image mode=\\"widthFix\\"></image> 
  </view>
"
`;

exports[`attributify > extract1 2`] = `
"
<template>
  <div h-80 text-center flex flex-col align-center select-none all:transition-400>
    <input type=\\"checkbox\\" peer mt-a>
    <div mb-a group peer-checked=\\"text-4xl\\">
      <div
        font-100 text-4xl mb--3 p-10
        bg-gradient=\\"to-r from-yellow-400 via-red-500 to-pink-500\\"
      >
        ~
      </div>
      <div text-5xl font-100 sm=\\"bg-blue-600\\">
        unocss
      </div>
      <div op-20 font-200 mt-1 tracking-wider group-hover=\\"text-teal-400 op-50\\">
        Re-imaging Atomic CSS
      </div>
    </div>
  </div>
  <div flex>
    <div ma inline-flex relative h-14>
      <input type=\\"text\\" m-0 pt-4 px-4 text-true-gray-800 peer 
      placeholder=\\"unocss\\" 
      un-placeholder=\\"text-red\\">
      <label absolute leading-1rem left-4 pointer-events-none text-gray-7 top=\\"1/3\\" transition=\\"200 linear\\"
        peer-not-placeholder-shown=\\"-translate-y-4 scale-75 origin-top-left text-green-500\\"
        peer-focus=\\"-translate-y-4 scale-75 origin-top-left text-green-500\\"
        before=\\"content-!\\"
        after=\\"content-[!]\\"
      >Experience now</label>
    </div>
  </div>
</template>
"
`;

exports[`attributify > extract2 1`] = `
"
  <view >
    <button
      h-80 text-center flex flex-col align-center select-none all:transition-400
      bg=\\"blue-400 hover:blue-400 dark:!blue-400 dark:hover:blue-400\\"
      
      class=\\"text-red font-bold bg-blue-500 bg-hover:blue-500 bg-dark:!blue-500 bg-dark:hover:blue-500\\"
      :loading=\\"loading\\"
      my-class=\\"text-red font-bold\\"
      title=\\"this is title\\"
      my-prop
      non-value
      :class=\\"{ 'text-blue': true, 'text-green': false }\\"
      :class=\\"[ 'text-blue', 'text-green' ]\\"
      :class=\\"[ str === 'blue' ? 'text-blue' : 'text-red' ]\\"
    >
      Button
    </button>

    <button border=\\"~ red\\">
      Button
    </button>

    <button flex=\\"~ col wrap\\">
      Button
    </button>

    <button 
      bg=\\"blue-400 hover:blue-500 dark:blue-500 dark:hover:blue-600\\"
      text=\\"sm white\\"
      font=\\"mono light\\"
      p=\\"y-2 x-4\\"
      border=\\"2 rounded blue-200\\"
    >
      Button
    </button>

    <image mode=\\"widthFix\\"></image> 
  </view>
"
`;

exports[`attributify > extract3 1`] = `
"
  <view >
    <button
      h-80  flex    
      
      li-bg=\\"blue-500 hover:blue-500 dark:!blue-500 dark:hover:blue-500\\"
      class=\\"text-red font-bold text-center flex-col align-center select-none all:transition-400 bg-blue-400 bg-hover:blue-400 bg-dark:!blue-400 bg-dark:hover:blue-400 non-value\\"
      :loading=\\"loading\\"
      my-class=\\"text-red font-bold\\"
      title=\\"this is title\\"
      my-prop
      
      :class=\\"{ 'text-blue': true, 'text-green': false }\\"
      :class=\\"[ 'text-blue', 'text-green' ]\\"
      :class=\\"[ str === 'blue' ? 'text-blue' : 'text-red' ]\\"
    >
      Button
    </button>

    <button class=\\"border border-red\\">
      Button
    </button>

    <button class=\\"flex flex-col flex-wrap\\">
      Button
    </button>

    <button 
      
      
      
      
      
    class=\\"bg-blue-400 bg-hover:blue-500 bg-dark:blue-500 bg-dark:hover:blue-600 text-sm text-white font-mono font-light p-y-2 p-x-4 border-2 border-rounded border-blue-200\\">
      Button
    </button>

    <image mode=\\"widthFix\\"></image> 
  </view>
"
`;

exports[`attributify > extract4 1`] = `
"
  <view >
    <button
            
      
      li-bg=\\"blue-500 hover:blue-500 dark:!blue-500 dark:hover:blue-500\\"
      class=\\"text-red font-bold h-80 text-center flex flex-col align-center select-none all:transition-400 bg-blue-400 bg-hover:blue-400 bg-dark:!blue-400 bg-dark:hover:blue-400 my-prop non-value\\"
      :loading=\\"loading\\"
      my-class=\\"text-red font-bold\\"
      title=\\"this is title\\"
      
      
      :class=\\"{ 'text-blue': true, 'text-green': false }\\"
      :class=\\"[ 'text-blue', 'text-green' ]\\"
      :class=\\"[ str === 'blue' ? 'text-blue' : 'text-red' ]\\"
    >
      Button
    </button>

    <button class=\\"border border-red\\">
      Button
    </button>

    <button class=\\"flex flex-col flex-wrap\\">
      Button
    </button>

    <button 
      
      
      
      
      
    class=\\"bg-blue-400 bg-hover:blue-500 bg-dark:blue-500 bg-dark:hover:blue-600 text-sm text-white font-mono font-light p-y-2 p-x-4 border-2 border-rounded border-blue-200\\">
      Button
    </button>

    <image mode=\\"widthFix\\"></image> 
  </view>
"
`;
